--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: production-planning
+    container_name: huawei
     ports:
       - "8081:8081"
     depends_on:
