--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.huawei</groupId>
-    <artifactId>huawei</artifactId>
+    <artifactId>production-planning</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>production-planning</name>
     <description>production-planning</description>
